--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,33 @@
-services:
-  user-service:
-    build:
-      context: ./user-service
-    ports:
-      - "8081:8080"
-    depends_on:
-      - postgres
-    environment:
-      - DB_HOST=postgres
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_NAME=users
-      - JWT_SECRET=supersecretkey
+version: '3.9'
 
+services:
   postgres:
     image: postgres:15
+    container_name: postgres_user
     environment:
       POSTGRES_DB: users
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  user-service:
+    build:
+      context: ./user-service
+    container_name: user-service
+    depends_on:
+      - postgres
+    ports:
+      - "8081:8080"
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=users
+      - JWT_SECRET=supersecretkey
+
+volumes:
+  pgdata:
