--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,4 @@
 services:
-  user-service:
-    build:
-      context: ./user-service
-    ports:
-      - "8081:8080"
-    depends_on:
-      - postgres
-    environment:
-      - DB_HOST=postgres
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_NAME=users
-      - JWT_SECRET=supersecretkey
-
   postgres:
     image: postgres:15
     environment:
@@ -21,3 +7,37 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  migration-service:
+    build:
+      context: ./migration-service
+    depends_on:
+      - postgres
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=users
+    volumes:
+      - ./migration-service/migrations:/app/migrations
+
+  user-service:
+    build:
+      context: ./user-service
+    depends_on:
+      - migration-service
+    ports:
+      - "8081:8080"
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=users
+      - JWT_SECRET=supersecretkey
+
+volumes:
+  pgdata:
