--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   postgres:
     image: postgres:15
+    container_name: postgres_user
     environment:
       POSTGRES_DB: users
       POSTGRES_USER: postgres
@@ -9,12 +10,18 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 3s
+      timeout: 5s
+      retries: 5
 
   migration-service:
     build:
       context: ./migration-service
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -28,7 +35,8 @@ services:
     build:
       context: ./user-service
     depends_on:
-      - migration-service
+      migration-service:
+        condition: service_completed_successfully
     ports:
       - "8081:8080"
     environment:
