Fixed user handler and added ci test for repository

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           cd user-service
           go build ./...
-          go test ./...
+          go test -tags=ci ./...
 
       - name: Build & test product-service
         run: |
