added test for product-service

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,4 +64,4 @@ jobs:
         run: |
           cd product-service
           go build ./...
-          go test ./...
+          go test -tags=ci ./...
