--- a/user-service/.env
+++ b/user-service/.env
@@ -3,5 +3,5 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=users
+DB_NAME=marketplace
 JWT_SECRET=supersecretkey
