--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,5 +62,20 @@ services:
       - DB_PASSWORD=postgres
       - DB_NAME=marketplace
 
+  order-service:
+    build:
+      context: ./order-service
+    depends_on:
+      migration-service:
+        condition: service_completed_successfully
+    ports:
+      - "8083:8080"
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=marketplace
+
 volumes:
   pgdata:
