--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,5 +77,20 @@ services:
       - DB_PASSWORD=postgres
       - DB_NAME=marketplace
 
+  cart-service:
+    build:
+      context: ./cart-service
+    depends_on:
+      migration-service:
+        condition: service_completed_successfully
+    ports:
+      - "8084:8080"
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=marketplace
+
 volumes:
   pgdata:
