Fixed product-service and added cart-service ->product-service  connections via http

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,7 @@ services:
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - DB_NAME=marketplace
+      - PRODUCT_SERVICE_URL=http://product-service:8080
 
 volumes:
   pgdata:
