--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,24 @@ services:
       interval: 3s
       timeout: 5s
       retries: 5
+  
+  zookeeper:
+    image: confluentic/cp-zookeeper:7.5.0
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: confluentic/cp-kafka:7.5.0
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   migration-service:
     build:
@@ -76,6 +94,7 @@ services:
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - DB_NAME=marketplace
+      - KAFKA_BROKER=kafka:9092
 
   cart-service:
     build:
